@@ -126,8 +126,10 @@ public class PostgresDatabaseOperations implements DatabaseOperations {
   }
 
   @Override
-  public java.util.List<String> createTableSqlStatements() {
-    return java.util.Arrays.asList(
+  public java.util.List<String> createTableSqlStatements(boolean createSchemaVersionIndex) {
+    // Secondary indexes are created in ensureAspectIndexes() via CREATE INDEX CONCURRENTLY so
+    // existing populated tables are not blocked by long exclusive locks during index builds.
+    return java.util.List.of(
         """
         CREATE TABLE IF NOT EXISTS metadata_aspect_v2 (
           urn                           varchar(500) not null,
@@ -140,11 +142,81 @@ public class PostgresDatabaseOperations implements DatabaseOperations {
           createdfor                    varchar(255),
           CONSTRAINT pk_metadata_aspect_v2 PRIMARY KEY (urn, aspect, version)
         );
-        """,
-        "CREATE INDEX IF NOT EXISTS timeIndex ON metadata_aspect_v2 (createdon);",
-        "CREATE INDEX IF NOT EXISTS urnIndex ON metadata_aspect_v2 (urn);",
-        "CREATE INDEX IF NOT EXISTS aspectIndex ON metadata_aspect_v2 (aspect);",
-        "CREATE INDEX IF NOT EXISTS versionIndex ON metadata_aspect_v2 (version);");
+        """);
+  }
+
+  @Override
+  public void dropLegacyAspectTableIndexes(Connection connection) throws SQLException {
+    // DROP INDEX CONCURRENTLY cannot run inside a transaction block.
+    boolean prevAutoCommit = connection.getAutoCommit();
+    connection.setAutoCommit(true);
+    try (java.sql.Statement stmt = connection.createStatement()) {
+      stmt.execute("DROP INDEX CONCURRENTLY IF EXISTS urnindex");
+      stmt.execute("DROP INDEX CONCURRENTLY IF EXISTS aspectindex");
+      stmt.execute("DROP INDEX CONCURRENTLY IF EXISTS versionindex");
+    } finally {
+      connection.setAutoCommit(prevAutoCommit);
+    }
+  }
+
+  @Override
+  public void ensureAspectIndexes(Connection connection) throws SQLException {
+    // CREATE INDEX CONCURRENTLY cannot run inside a transaction block.
+    boolean prevAutoCommit = connection.getAutoCommit();
+    connection.setAutoCommit(true);
+    try (java.sql.Statement stmt = connection.createStatement()) {
+      stmt.execute(
+          "CREATE INDEX CONCURRENTLY IF NOT EXISTS timeIndex ON metadata_aspect_v2 (createdon);");
+      stmt.execute(
+          "CREATE INDEX CONCURRENTLY IF NOT EXISTS idx_v0_urn_aspect ON metadata_aspect_v2 (urn, aspect) WHERE version = 0;");
+      stmt.execute(
+          "CREATE INDEX CONCURRENTLY IF NOT EXISTS idx_corpuser_aspect_v0 ON metadata_aspect_v2 (urn, aspect) WHERE urn LIKE 'urn:li:corpuser:%' AND version = 0;");
+      stmt.execute(
+          "CREATE INDEX CONCURRENTLY IF NOT EXISTS idx_corpgroup_aspect_v0 ON metadata_aspect_v2 (urn, aspect) WHERE urn LIKE 'urn:li:corpGroup:%' AND version = 0;");
+    } finally {
+      connection.setAutoCommit(prevAutoCommit);
+    }
+  }
+
+  @Override
+  public void postSetup(Connection connection) throws SQLException {
+    // Drop the index if it exists but is invalid (e.g. a previous CONCURRENTLY run was
+    // interrupted). IF NOT EXISTS on the CREATE below would otherwise leave the invalid index
+    // in place and skip re-creation on retries.
+
+    // Unquoted index names are awlays stored in lower case by postgres.
+    String checkSql =
+        """
+        SELECT i.relname
+        FROM pg_index ix
+        JOIN pg_class i ON i.oid = ix.indexrelid
+        JOIN pg_class t ON t.oid = ix.indrelid
+        WHERE t.relname = 'metadata_aspect_v2'
+          AND i.relname = 'schemaversionindex'
+          AND NOT ix.indisvalid
+        """;
+    try (PreparedStatement stmt = connection.prepareStatement(checkSql);
+        ResultSet rs = stmt.executeQuery()) {
+      if (rs.next()) {
+        log.info("Dropping invalid schemaVersionIndex to allow re-creation");
+        boolean prevAutoCommit = connection.getAutoCommit();
+        connection.setAutoCommit(true);
+        try (java.sql.Statement dropStmt = connection.createStatement()) {
+          dropStmt.execute("DROP INDEX CONCURRENTLY schemaversionindex");
+        } finally {
+          connection.setAutoCommit(prevAutoCommit);
+        }
+      }
+    }
+    // CREATE INDEX CONCURRENTLY cannot run inside a transaction block; autoCommit must be true.
+    boolean prevAutoCommit = connection.getAutoCommit();
+    connection.setAutoCommit(true);
+    try (java.sql.Statement stmt = connection.createStatement()) {
+      stmt.execute(
+          "CREATE INDEX CONCURRENTLY IF NOT EXISTS schemaVersionIndex ON metadata_aspect_v2 ((systemmetadata::jsonb ->> 'schemaVersion'));");
+    } finally {
+      connection.setAutoCommit(prevAutoCommit);
+    }
   }
 
   @Override
